[package]
name = "identity-comm"
version = "0.5.0-dev.4"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "An implementation of the DIDComm Messaging Specification."

[dependencies]
identity-core = { path = "../identity-core", version = "=0.5.0-dev.4" }
identity-credential = { path = "../identity-credential", version = "=0.5.0-dev.4" }
identity-did = { path = "../identity-did", version = "=0.5.0-dev.4" }
identity-iota = { path = "../identity-iota", version = "=0.5.0-dev.4", default-features = false }
# libjose = { path = "../libjose", version = "=0.1.0" }
paste = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.21", features = ["derive"] }
thiserror = { version = "1.0" }
uuid = { version = "0.8", features = ["serde", "v4"], default-features = false }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
uuid = { version = "*", features = ["wasm-bindgen"], default-features = false }
