[package]
name = "identity-core"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "The core traits and types for the identity-rs library."
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "identity"]
homepage = "https://www.iota.org"

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["std"] }
bs58 = { version = "0.4", default-features = false, features = ["std"] }
multibase = { version = "0.9", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = { version = "0.4", default-features = false }
identity-diff = { version = "=0.3.0", path = "../identity-diff", default-features = false }
roaring = { version = "0.7", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_jcs = { version = "0.1", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
subtle = { version = "2.4", default-features = false }
strum = { version = "0.21", features = ["derive"] }
thiserror = { version = "1.0", default-features = false }
typenum = { version = "1.13", default-features = false }
url = { version = "2.2", default-features = false, features = ["serde"] }
zeroize = { version = "1.3", default-features = false }

[dependencies.iota-crypto]
version = "0.5"
default-features = false
features = ["blake2b", "ed25519", "random", "sha"]

[dev-dependencies]
rand = { version = "0.8" }
quickcheck = { version = "1.0" }
quickcheck_macros = { version = "1.0" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
