[package]
name = "identity-core"
version = "0.4.1"
authors = ["IOTA Stiftung"]
edition = "2018"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "The core traits and types for the identity-rs library."

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["std"] }
bs58 = { version = "0.4", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = { version = "0.4", default-features = false }
identity-diff = { version = "=0.4.1", path = "../identity-diff", default-features = false }
multibase = { version = "0.9", default-features = false, features = ["std"] }
roaring = { version = "0.7", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_jcs = { version = "0.1", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
strum = { version = "0.21", features = ["derive"] }
subtle = { version = "2.4", default-features = false }
thiserror = { version = "1.0", default-features = false }
typenum = { version = "1.13", default-features = false }
url = { version = "2.2", default-features = false, features = ["serde"] }
zeroize = { version = "1.4", default-features = false }

[dependencies.iota-crypto]
version = ">=0.7, <=0.9.1"
default-features = false
features = ["blake2b", "ed25519", "random", "sha"]

[dev-dependencies]
quickcheck = { version = "1.0" }
quickcheck_macros = { version = "1.0" }
rand = { version = "0.8" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
