[package]
name = "identity-core"
version = "0.5.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "The core traits and types for the identity-rs library."

[dependencies]
bs58 = { version = "0.4", default-features = false, features = ["std"] }
identity-diff = { version = "=0.5.0", path = "../identity-diff", default-features = false }
multibase = { version = "0.9", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_jcs = { version = "0.1", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
strum = { version = "0.21", features = ["derive"] }
thiserror = { version = "1.0", default-features = false }
time = { version = "0.3.5", default-features = false, features = ["std", "serde", "parsing", "formatting"] }
url = { version = "2.2", default-features = false, features = ["serde"] }
zeroize = { version = "1.4", default-features = false }

[dependencies.iota-crypto]
version = ">=0.7, <0.10"
default-features = false
features = ["ed25519", "random", "sha", "x25519"]

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
js-sys = { version = "0.3.55", default-features = false }

[dev-dependencies]
hex = { version = "0.4", default-features = false }
proptest = { version = "1.0.0" }
quickcheck = { version = "1.0" }
quickcheck_macros = { version = "1.0" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
