[package]
name = "identity-credential"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "An implementation of the Verfiable Credentials standard."
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "identity"]
homepage = "https://www.iota.org"

[features]
default = []
wasm = ["wasm-error", "wasm-bindgen"]

[dependencies]
identity-core = { version = "=0.3.0", path = "../identity-core" }
identity-did = { version = "=0.3.0", path = "../identity-did" }
lazy_static = { version = "1.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1.0", default-features = false }
wasm-error = { version = "0.1", default-features = false, features = ["derive"], path = "../wasm-error", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
