[package]
name = "identity-did"
version = "0.5.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "An implementation of the Decentralized Identifiers standard."

[dependencies]
dataurl = { version = "0.1.2", default-features = false, optional = true }
did_url = { version = "0.1", default-features = false, features = ["std", "serde"] }
flate2 = { version = "1.0.23", default-features = false, features = ["rust_backend"], optional = true }
form_urlencoded = { version = "1.0.1", default-features = false }
identity-core = { version = "=0.5.0", path = "../identity-core" }
indexmap = { version = "1.7", default-features = false, features = ["std", "serde-1"] }
roaring = { version = "0.9.0", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
strum = { version = "0.21", features = ["derive"] }
thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
proptest = { version = "1.0" }
serde_json = { version = "1.0", default-features = false }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["revocation-bitmap"]
revocation-bitmap = ["dataurl", "flate2", "roaring"]
