[package]
name = "identity-diff"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "The `Diff` trait for the identity-rs library."
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "identity"]
homepage = "https://www.iota.org"

[dependencies]
did_url = { version = "0.1", default-features = false, features = ["alloc"] }
identity-derive = { version = "=0.3.0", path = "derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.21", features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
serde_json = "1.0"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
