[package]
name = "identity-diff"
version = "0.5.0-dev.5"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "The `Diff` trait for the identity-rs library."

[dependencies]
identity-diff-derive = { version = "=0.5.0-dev.5", path = "derive", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.21", features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["derive"]
derive = ["identity-diff-derive"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
