[package]
name = "identity-iota-core"
version = "0.5.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = ""

[dependencies]
bee-message = { version = "0.1.6", default-features = false, features = ["serde"] }
identity-core = { version = "=0.5.0", path = "../identity-core", default-features = false }
identity-did = { version = "=0.5.0", path = "../identity-did", default-features = false }
lazy_static = { version = "1.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
strum = { version = "0.24.0", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1.0", default-features = false }

[dependencies.iota-crypto]
version = ">=0.7, <0.10"
default-features = false
features = ["blake2b"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enables revocation with `RevocationBitmap2022`.
revocation-bitmap = ["identity-did/revocation-bitmap"]
