[package]
name = "identity-iota"
version = "0.5.0-dev.2"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "An IOTA Tangle intergration for the identity-rs library."

[dependencies]
async-trait = { version = "0.1", default-features = false }
bee-rest-api = { version = "0.1.7", default-features = false }
brotli = { version = "3.3", default-features = false, features = ["std"] }
dashmap = { version = "4.0" }
form_urlencoded = { version = "1.0" }
futures = { version = "0.3" }
identity-core = { version = "=0.5.0-dev.2", path = "../identity-core" }
identity-credential = { version = "=0.5.0-dev.2", path = "../identity-credential" }
identity-did = { version = "=0.5.0-dev.2", path = "../identity-did" }
itertools = { version = "0.10" }
lazy_static = { version = "1.4", default-features = false }
log = { version = "0.4", default-features = false }
num-derive = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
strum = { version = "0.21", features = ["derive"] }
thiserror = { version = "1.0", default-features = false }

[dependencies.iota-client]
git = "https://github.com/iotaledger/iota.rs"
rev = "c7d1cc4bae4ef00f16314239463ce115f8c6b35a"
default-features = false
features = ["pow-fallback"]

[dependencies.iota-crypto]
version = "0.7"
default-features = false
features = ["blake2b"]

[features]
default = ["async"]

# Enables async runtime support (Tokio)
async = ["iota-client/async"]

# Enables Web Assembly support
wasm = ["iota-client/wasm"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
