[package]
name = "identity-iota"
version = "0.4.1"
authors = ["IOTA Stiftung"]
edition = "2018"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "An IOTA Tangle intergration for the identity-rs library."

[dependencies]
async-trait = { version = "0.1", default-features = false }
dashmap = { version = "4.0" }
form_urlencoded = { version = "1.0" }
futures = { version = "0.3" }
identity-core = { version = "=0.4.1", path = "../identity-core" }
identity-credential = { version = "=0.4.1", path = "../identity-credential" }
identity-did = { version = "=0.4.1", path = "../identity-did" }
lazy_static = { version = "1.4", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
strum = { version = "0.21", features = ["derive"] }
thiserror = { version = "1.0", default-features = false }
iota-client = {version = "1.1.1", default-features = false}

[dependencies.iota-crypto]
version = "=0.9.1"
default-features = false
features = ["blake2b"]

[features]
default = ["async"]

# Enables async runtime support (Tokio)
async = ["iota-client/async"]

# Enables Web Assembly support
wasm = ["iota-client/wasm"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
