[package]
name = "identity-stardust"
version = "0.5.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "stardust", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "An IOTA Ledger integration for the identity.rs library."

[workspace]

[dependencies]
async-trait = { version = "0.1", default-features = false }
brotli = { version = "3.3", default-features = false, features = ["std"] }
form_urlencoded = { version = "1.0" }
futures = { version = "0.3" }
identity-core = { version = "=0.5.0", path = "../identity-core", default-features = false }
identity-credential = { version = "=0.5.0", path = "../identity-credential", default-features = false }
identity-did = { version = "=0.5.0", path = "../identity-did", default-features = false }
itertools = { version = "0.10" }
lazy_static = { version = "1.4", default-features = false }
log = { version = "0.4", default-features = false }
num-derive = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_repr = { version = "0.1", default-features = false }
strum = { version = "0.21", features = ["derive"] }
thiserror = { version = "1.0", default-features = false }

[dependencies.iota-client]
git = "https://github.com/iotaledger/iota.rs"
rev = "f57c55370bd5e1d6593d4b345192c7b20d9fe130" # develop branch, 2022-06-07
features = ["tls"]
default-features = false

[dev-dependencies]
proptest = { version = "1.0.0", default-features = false, features = ["std"] }
tokio = { version = "1.17.0", default-features = false, features = ["macros"] }
iota-crypto = { version = "0.11.0", default-features = false, features = ["bip39", "bip39-en"] }
anyhow = { version = "1.0.57" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
