[package]
name = "identity"
version = "0.5.0"
authors = ["IOTA Stiftung"]
documentation = "https://wiki.iota.org/identity.rs/introduction"
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity", "did"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "Tools for working with Self-sovereign Identity."

[dependencies]
identity-account = { version = "=0.5.0", path = "../identity-account", default-features = false, optional = true }
identity-account-storage = { version = "=0.5.0", path = "../identity-account-storage", default-features = false, optional = true }
identity-actor = { version = "=0.5.0", path = "../identity-actor", default-features = false, optional = true }
# identity-comm = { version = "=0.5.0-dev.4", path = "../identity-comm", optional = true }
identity-core = { version = "=0.5.0", path = "../identity-core", default-features = false }
identity-credential = { version = "=0.5.0", path = "../identity-credential" }
identity-did = { version = "=0.5.0", path = "../identity-did" }
identity-iota = { version = "=0.5.0", path = "../identity-iota", default-features = false }
identity-iota-core = { version = "=0.5.0", path = "../identity-iota-core", default-features = false }

[dev-dependencies]
criterion = { version = "0.3" }
tokio = { version = "1.17.0", features = ["full"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["async"]

# Enables async runtime support (Tokio).
async = ["identity-iota/async"]

# Enables support for secure storage of DID Documents
account = ["identity-account", "identity-account-storage"]

# Enables support for stronghold storage.
stronghold = ["identity-account/stronghold", "identity-account-storage/stronghold"]

# Enables support for the identity actor
actor = ["identity-actor"]

# Enables support for DID Communication
# comm = ["identity-comm"]

# Enables `Send` + `Sync` bounds for the Storage trait.
send-sync-storage = ["identity-account-storage/send-sync-storage"]

# Exposes Storage `test_suite` module.
storage-test-suite = ["identity-account-storage/storage-test-suite"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
