[package]
name = "identity"
version = "0.5.0"
authors = ["IOTA Stiftung"]
documentation = "https://wiki.iota.org/identity.rs/introduction"
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity", "did", "ssi"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
rust-version = "1.60"
description = "Framework for Self-Sovereign Identity with IOTA DID."

[dependencies]
identity-account = { version = "=0.5.0", path = "../identity-account", default-features = false, optional = true }
identity-account-storage = { version = "=0.5.0", path = "../identity-account-storage", default-features = false, optional = true }
# identity-comm = { version = "=0.5.0-dev.4", path = "../identity-comm", optional = true }
identity-core = { version = "=0.5.0", path = "../identity-core", default-features = false }
identity-credential = { version = "=0.5.0", path = "../identity-credential", default-features = false }
identity-did = { version = "=0.5.0", path = "../identity-did", default-features = false }
identity_iota_client = { version = "=0.5.0", path = "../identity_iota_client", default-features = false }
identity_iota_core = { version = "=0.5.0", path = "../identity_iota_core", default-features = false }

[dev-dependencies]
criterion = { version = "0.3" }
tokio = { version = "1.17.0", features = ["full"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["async", "account", "stronghold", "send-sync-storage", "unstable-encryption", "revocation-bitmap"]

# Enables async runtime support (Tokio).
async = ["identity_iota_client/async"]

# Enables support for secure storage of DID Documents
account = ["identity-account", "identity-account-storage"]

# Enables support for stronghold storage.
stronghold = ["identity-account/stronghold", "identity-account-storage/stronghold"]

# Enables support for DID Communication
# comm = ["identity-comm"]

# Enables `Send` + `Sync` bounds for the Storage trait.
send-sync-storage = ["identity-account-storage/send-sync-storage"]

# Exposes Storage `test_suite` module.
storage-test-suite = ["identity-account-storage/storage-test-suite"]

# Enables revocation with `RevocationBitmap2022`.
revocation-bitmap = [
  "identity-account?/revocation-bitmap",
  "identity_iota_client/revocation-bitmap",
  "identity-credential/revocation-bitmap",
]

# Enables encryption and decryption functionality.
# Breaking changes to types and functions behind this flag are not covered by semver.
unstable-encryption = ["identity-account/encryption"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
