[package]
name = "identity_account_storage"
version = "0.6.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity", "storage"]
license = "Apache-2.0"
publish = false
readme = "./README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "Secure storage for Decentralized Identifiers and Verifiable Credentials."

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"], optional = true }
async-trait = { version = "0.1", default-features = false }
function_name = { version = "0.2", default-features = false, optional = true }
futures = { version = "0.3", optional = true }
hashbrown = { version = "0.11", features = ["serde"] }
identity_core = { version = "=0.6.0", path = "../identity_core", default-features = false }
identity_did = { version = "=0.6.0", path = "../identity_did", default-features = false }
identity_iota_core_legacy = { version = "=0.6.0", path = "../identity_iota_core_legacy", default-features = false }
iota-crypto = { version = "0.12.1", default-features = false, features = ["hmac", "pbkdf", "sha", "std", "aes-gcm", "aes-kw"] }
iota_stronghold = { version = "0.6.4", default-features = false, features = ["std"], optional = true }
once_cell = { version = "1.7", default-features = false, features = ["std"], optional = true }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }
seahash = { version = "4.1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
strum = { version = "0.24.0", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1.0" }
tokio = { version = "1.17.0", default-features = false, features = ["sync", "fs"], optional = true }
zeroize = { version = "1.4" }

[dev-dependencies]
rusty-fork = { version = "0.3" }
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync"] }

[features]
default = [
  "stronghold",
  "send-sync-storage",
  "storage-test-suite",
  "encryption",
]
stronghold = ["iota_stronghold", "tokio", "futures", "once_cell", "rand"]
# Enables `Send` + `Sync` bounds for the Storage trait.
send-sync-storage = []
# Exposes Storage `test_suite` module.
storage-test-suite = ["anyhow", "function_name", "rand"]
# Enables encryption and decryption in the Storage trait.
encryption = []
